--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
 }
 
 .navbarNav {
+  margin-top: 10px;
   width: 100%;
   margin-top: 0.75rem;
   overflow-y: hidden;
@@ -52,6 +53,9 @@ body {
   align-items: center;
 }
 
+.navbarListItem:active {
+  fill: #b31111;
+}
 .navbarListItemName,
 .navbarListItemNameActive {
   margin-top: 0.25rem;
@@ -63,10 +67,51 @@ body {
   color: #2c2c2c;
 }
 
-.cl-rootBox,
-.cl-signIn-root {
+.profile-container {
+  position: absolute;
+  top: 20px;
+  right: 60px;
+}
+
+.homeBtnContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 10px;
+}
+
+.homeBtn {
+  border: 1px solid #8f8f8f;
+  padding: 20px;
+  width: 190px;
+  border-radius: 3%;
+  margin-bottom: 20px;
+}
+
+.homeBtn:hover {
+  background-color: #8cee8f;
+}
+
+h1 {
+  font-size: 30px;
+  text-align: center;
+}
+.cl-profileSectionContent__danger {
+  margin-bottom: 50px;
+}
+
+@media screen and (min-width: 300px) {
+  .profile-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+
+  .cl-profileSection {
+    margin-bottom: 30px;
+  }
 }
