Lobby Created with Restaurant List and Cards

--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,32 @@ h1 {
     margin-bottom: 30px;
   }
 }
+
+.messageCard {
+  padding: 10px;
+  border: 2px solid blue;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.card {
+  width: 90%;
+  height: 88vh;
+  background-color: lightblue;
+  margin: 10px auto 10px auto;
+  border-radius: 15px;
+  padding: 20px;
+}
+button {
+  border-radius: 50%; /* Circular shape */
+  width: 40px; /* Width of the button */
+  height: 40px; /* Height of the button */
+  /* Add additional styling as needed */
+}
+.likeBtn {
+  background-color: lightgreen;
+}
+
+.dislikeBtn {
+  background-color: lightcoral;
+}
