--- a/src/index.css
+++ b/src/index.css
@@ -203,7 +203,9 @@ button {
   color: #555555;
 }
 
-.like-btn, .dislike-btn {
+.like-btn,
+.dislike-btn {
+  display: flex;
   border: none;
   padding: 10px 20px;
   border-radius: 20px;
@@ -214,14 +216,16 @@ button {
   margin: 0 10px;
   width: 80px; /* Adjust size as needed */
   height: 80px; /* Adjust size as needed */
+  align-items: center;
+  margin-bottom: 200px;
 }
 
 .like-btn {
-  background-color: #4CAF50; /* Green color for like */
+  background-color: #4caf50; /* Green color for like */
 }
 
 .dislike-btn {
-  background-color: #F44336; /* Red color for dislike */
+  background-color: #f44336; /* Red color for dislike */
 }
 
 .BtnContainer {
